thêm API hiển thị chi tiết lịch sử thi+ refactor lại code